# riot-auth

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: cookie_auth.py
riot_auth/: __init__.py  auth.py  errors.py
